--- a/static/index.html
+++ b/static/index.html
@@ -23,14 +23,13 @@
     <!-- Header -->
     <div class="container">
       <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+        <a href="/" class="d-flex align-items-center mb-3 mb-md-0 ms-3 me-3 me-md-auto text-dark text-decoration-none">
           <svg class="bi me-2" width="40" height="32">
             <use xlink:href="#bootstrap" />
           </svg>
           <span class="fs-4">Pastebin</span>
         </a>
-
-        <div class="btn-group" role="group" id="buttons">
+        <div class="btn-group ms-3 me-3" role="group" id="buttons">
           <button type="button" class="btn btn-primary" id="save">Save</button>
           <button type="button" class="btn btn-danger" id="new">New</button>
           <button type="button" class="btn btn-info" id="dup">Duplicate</button>
