Fix flex container issues.

--- a/static/index.html
+++ b/static/index.html
@@ -34,7 +34,7 @@
           <button type="button" class="btn btn-danger" id="new">New</button>
           <button type="button" class="btn btn-info" id="dup">Duplicate</button>
           <button type="button" class="btn btn-dark" id="raw">Raw</button>
-          <button type="button" class="btn btn-success" id="url">Get URL</button>
+          <button type="button" class="btn btn-success" id="url">URL</button>
         </div>
       </header>
     </div>
